--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -687,7 +687,7 @@ h6 {
 	font-weight: 500;
 	outline: none !important;
 	box-shadow: none !important;
-	border-radius: 15px;
+	border-radius: 5px;
 	font-size: 18px;
 	text-align: center;
 	display: inline-flex;
@@ -784,7 +784,7 @@ h6 {
 	background-color: hsl(var(--accent));
 	border-color: hsl(var(--accent));
 	padding: 10px 39px;
-	border-radius: 15px;
+	border-radius: 6px;
 }
 
 .cmn--btn:hover,
@@ -1407,7 +1407,7 @@ h6 {
 }
 
 .label {
-	font-size: 18px;
+	font-size: 1rem;
 	color: hsl(var(--heading));
 	font-weight: 500;
 	margin-bottom: 3px;
@@ -1432,13 +1432,13 @@ h6 {
 }
 
 .form--control {
-	height: 60px;
-	border-radius: 10px;
+	height: 50px;
+	border-radius: 6px;
 	border: none;
 	outline: 0 !important;
 	box-shadow: none !important;
 	background-color: #f5f5f5;
-	font-size: 18px;
+	font-size: 14px;
 	padding-inline: 25px;
 }
 
@@ -3866,8 +3866,12 @@ div[class*="col"]:nth-child(2) .video-item::before {
 }
 
 .login-section .login-logo {
+	
 	margin: 30px auto 20px;
 	text-align: center;
+}
+.login-section .login-logo img {
+	width: 115px;
 }
 
 @media (max-width: 1500px) and (min-width: 1400px) {
@@ -3917,8 +3921,8 @@ div[class*="col"]:nth-child(2) .video-item::before {
 }
 
 .login-wrapper {
-	width: 560px;
-	padding: 40px 45px 30px;
+	width: 500px;
+	padding: 35px 40px 25px;
 	border: 1px solid #d3d3d3;
 	border-radius: 10px;
 	background-color: hsl(var(--white));
@@ -4048,7 +4052,7 @@ div[class*="col"]:nth-child(2) .video-item::before {
 }
 
 .bottom-text {
-	padding-top: 40px;
+	padding-top: 35px;
 }
 
 @media (max-width: 1399px) {
@@ -4119,7 +4123,7 @@ input[type="checkbox"] {
 .checkbox-wrapper .terms-content {
 	width: calc(100% - 24px);
 	padding-left: 20px;
-	font-size: 18px;
+	font-size: 1rem;
 }
 
 @media (max-width: 1500px) {
@@ -4153,7 +4157,7 @@ input[type="checkbox"] {
 }
 
 .text-wrapper .title {
-	font-size: 26px;
+	font-size: 20px;
 }
 
 @media (max-width: 575px) {
@@ -4636,8 +4640,9 @@ h6 {
 	line-height: 58px;
 }
 @media (max-width: 575px) {
+
 	a.login-logo-two.d-lg-none.d-block.text-center img {
-		width: 171px;
+		width: 105px;
 	}
 }
 @media (min-width: 1400px) {
@@ -4651,8 +4656,8 @@ h6 {
 	}
 }
 .logo-mb-wrapper {
-	padding-top: 25px;
-	margin-bottom: 60px;
+	padding-top: 10px;
+	margin-bottom: 30px;
 }
 @media (max-width: 575px) {
 	.logo-mb-wrapper {
@@ -4661,12 +4666,12 @@ h6 {
 	}
 }
 .cmn--btn.login-btn {
-	height: 58px;
+	height: 47px;
 	line-height: 58px;
 }
 @media (max-width: 575px) {
 	.bottom-text {
-		padding-top: 30px;
+		padding-top: 25px;
 	}
 }
 .pb--35 {
