--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -613,7 +613,7 @@ h4 {
 
 @media (max-width: 1600px) {
 	h4 {
-		font-size: 19px;
+		font-size: 16px;
 	}
 }
 
@@ -625,7 +625,7 @@ h4 {
 
 @media (max-width: 575px) {
 	h4 {
-		font-size: 20px;
+		font-size: 18px;
 	}
 }
 
@@ -712,7 +712,7 @@ h6 {
 @media (max-width: 1600px) {
 	.btn,
 	.cmn--btn {
-		font-size: 17px;
+		font-size: 15px;
 	}
 }
 .btn.btn--lg,
@@ -1215,8 +1215,8 @@ h6 {
 .table thead tr th {
 	background: #e9e4ef;
 	text-align: center;
-	font-size: 18px;
-	padding: 25px 15px;
+	font-size: 15px;
+	padding: 10px 15px;
 	color: hsl(var(--heading)) !important;
 	font-family: var(--other-font);
 	font-weight: 500;
@@ -1245,7 +1245,7 @@ h6 {
 	padding: 15px 15px;
 	border-width: 0px;
 	font-family: var(--other-font);
-	font-size: 16px;
+	font-size: 14px;
 }
 
 .table tbody tr td::before {
@@ -1266,7 +1266,7 @@ h6 {
 }
 
 .main-table thead tr th {
-	padding: 17.5px 15px;
+	padding: 10px 15px;
 }
 
 .main-table tbody tr td {
@@ -1972,7 +1972,7 @@ input:-webkit-autofill:focus {
 }
 
 .search-box .profile-title {
-	font-size: 22px;
+	font-size: 20px;
 	padding: 10px 21px;
 	border-radius: 20px;
 }
@@ -2056,7 +2056,7 @@ input:-webkit-autofill:focus {
 .top-area .form-select {
 	min-width: 220px;
 	height: 50px;
-	font-size: 20px;
+	font-size: 17px;
 	color: hsl(var(--accent));
 	border: 1px solid hsl(var(--accent));
 	background-color: hsl(Var(--white));
@@ -2319,6 +2319,9 @@ div[class*="col"]:nth-child(2) .video-item::before {
 @media (max-width: 575px) {
 	.popup-wrapper .cmn--btn:last-child {
 		margin-top: 15px;
+		font-weight: 500;
+		font-size: 14px;
+		line-height: 18px;
 	}
 }
 .popup-wrapper button {
@@ -2410,6 +2413,10 @@ div[class*="col"]:nth-child(2) .video-item::before {
 		width: 230px;
 		border: 0;
 	}
+	.menu-sidebar.menu-icon-text-show .menu-icon-text img {
+		margin: 0 auto;
+		max-width: 81px;
+	}
 }
 
 .menu-sidebar::-webkit-scrollbar {
@@ -2455,6 +2462,8 @@ div[class*="col"]:nth-child(2) .video-item::before {
 @media (max-width: 1600px) {
 	.menu-sidebar.menu-icon-show .menu-icon {
 		text-align: center;
+		padding-top: 7px;
+		padding-bottom: 7px;
 	}
 }
 
@@ -2464,10 +2473,13 @@ div[class*="col"]:nth-child(2) .video-item::before {
 
 .menu-sidebar.menu-icon-text-show .menu-icon-text {
 	display: block;
+	font-size: 15.3797px;
+	line-height: 15px;
 }
 
 .menu-sidebar.menu-icon-text-show .menu-icon-text img {
 	margin: 0 auto;
+	max-width: 93px;
 }
 
 .menu-li-shape {
@@ -2496,7 +2508,8 @@ div[class*="col"]:nth-child(2) .video-item::before {
 @media (max-width: 991px) {
 	.menu li a {
 		padding: 12px 40px;
-		font-size: 18px;
+		font-size: 13px;
+		line-height: 12px;
 	}
 }
 
@@ -2511,8 +2524,8 @@ div[class*="col"]:nth-child(2) .video-item::before {
 }
 
 .menu li img {
-	width: 30px;
-	height: 30px;
+	width: 18.75px;
+	height: 18.75px;
 	object-fit: contain;
 	margin-right: 35px !important;
 }
@@ -2647,10 +2660,11 @@ div[class*="col"]:nth-child(2) .video-item::before {
 }
 
 .user-wrapper .user-thumb {
-	width: 150px;
-	height: 150px;
+	width: 100px;
+	height: 100px;
 	border-radius: 50%;
 	overflow: hidden;
+	/* max-width: 100px; */
 }
 
 .user-wrapper .user-thumb img {
@@ -2660,13 +2674,19 @@ div[class*="col"]:nth-child(2) .video-item::before {
 
 @media (max-width: 991px) {
 	.user-wrapper .user-thumb-mobile {
-		margin-top: 120px;
+		margin-top: 110px;
+	}
+	.user-wrapper .user-thumb-mobile img{
+		max-width: 65px;
 	}
 }
 
 @media (max-width: 767px) {
 	.user-wrapper .user-content {
 		width: 100%;
+	}
+	.user-wrapper .user-content p {
+		margin-bottom: 0;
 	}
 }
 
@@ -2686,13 +2706,14 @@ div[class*="col"]:nth-child(2) .video-item::before {
 }
 
 .package-table {
-	padding: 25px 35px;
+	padding: 17px 35px;
 	border-radius: 30px;
 	background: #f7fbef;
-	margin-bottom: 35px;
+	margin-bottom: 15px;
 }
 .destop-thumb img {
 	width: 100%;
+	max-width: 277px;
 }
 
 @media (max-width: 1199px) {
@@ -2712,7 +2733,7 @@ div[class*="col"]:nth-child(2) .video-item::before {
 	width: 96px;
 	padding-left: 0px;
 	padding-right: 0px;
-	font-size: 14px;
+	font-size: 12px;
 }
 
 @media (max-width: 1500px) {
@@ -2731,7 +2752,7 @@ div[class*="col"]:nth-child(2) .video-item::before {
 }
 
 .package-table.shop-table tbody td {
-	font-size: 15px;
+	font-size: 12px;
 }
 
 .table-two-wrapper .gx-4 {
@@ -2741,7 +2762,7 @@ div[class*="col"]:nth-child(2) .video-item::before {
 .table-title {
 	font-weight: 500;
 	text-decoration: underline;
-	font-size: 22px;
+	font-size: 17px;
 }
 
 @media (max-width: 1500px) {
@@ -2831,7 +2852,7 @@ div[class*="col"]:nth-child(2) .video-item::before {
 	padding: 15px 12px;
 	background-color: #c8f2ef;
 	border-radius: 20px;
-	margin-top: 35px;
+	margin-top: 25px;
 }
 
 @media (max-width: 370px) {
@@ -2928,10 +2949,14 @@ div[class*="col"]:nth-child(2) .video-item::before {
 		margin-top: 127px !important;
 		outline: 1px solid #c8c8c8;
 		padding-bottom: 15px;
+		height: 550px;
 	}
 
 	.package-wrapper .row {
 		gap: 0px;
+		overflow: hidden;
+		overflow-y: auto;
+		height: 540px;
 	}
 
 	.package-wrapper .row .col-6 {
@@ -3017,11 +3042,11 @@ div[class*="col"]:nth-child(2) .video-item::before {
 }
 
 .package-item__content {
-	padding: 30px 20px 40px;
+	padding: 15px 20px 20px;
 }
 
 .package-item__content .title {
-	font-size: 22px;
+	font-size: 18px;
 	color: #223263;
 }
 .text--warning-two {
@@ -3044,7 +3069,7 @@ div[class*="col"]:nth-child(2) .video-item::before {
 }
 
 .package-item__content .video-photo {
-	font-size: 17px;
+	font-size: 14px;
 }
 
 @media (max-width: 575px) {
@@ -3101,13 +3126,13 @@ div[class*="col"]:nth-child(2) .video-item::before {
 
 .package-item .cmn--btn {
 	border-radius: 7px;
-	font-size: 19px;
+	font-size: 14px;
 }
 
 @media (max-width: 575px) {
 	.package-item .cmn--btn {
 		border-radius: 5px;
-		font-size: 13px;
+		font-size: 12px;
 		font-weight: 500;
 		margin-top: 17px;
 		padding-top: 0 !important;
@@ -3196,6 +3221,7 @@ div[class*="col"]:nth-child(2) .video-item::before {
 	.cart-item .cmn--btn {
 		padding-top: 10px;
 		padding-bottom: 10px;
+		font-weight: 500;
 		font-size: 15px;
 	}
 }
@@ -3281,7 +3307,11 @@ div[class*="col"]:nth-child(2) .video-item::before {
 }
 
 .header-title-mt-two {
-	margin-top: 235px;
+	margin-top: 200px;
+	max-width: 1062px;
+	margin-left: auto;
+	margin-right: auto;
+	padding-top: 20px;
 }
 
 @media (max-width: 1399px) {
@@ -3337,7 +3367,7 @@ div[class*="col"]:nth-child(2) .video-item::before {
 }
 
 .qr-area .row {
-	gap: 35px;
+	gap: 0px;
 }
 
 @media (max-width: 1399px) {
@@ -3362,7 +3392,7 @@ div[class*="col"]:nth-child(2) .video-item::before {
 }
 @media (max-width: 575px) {
 	.qr-wrapper {
-		margin-top: 50px;
+		margin-top: 20px;
 		margin-bottom: 0;
 	}
 }
@@ -3385,7 +3415,7 @@ div[class*="col"]:nth-child(2) .video-item::before {
 	padding: 20px 12px 17px;
 	background-color: hsl(var(--white));
 	border-radius: 30px;
-	margin-bottom: 30px;
+	margin-bottom: 15px;
 }
 @media (max-width: 575px) {
 	.mobile-wraper {
@@ -3434,7 +3464,7 @@ div[class*="col"]:nth-child(2) .video-item::before {
 
 .cart-table th {
 	background-color: transparent !important;
-	font-size: 18px !important;
+	font-size: 15px !important;
 }
 
 .cart-table .thumb {
@@ -3540,7 +3570,7 @@ div[class*="col"]:nth-child(2) .video-item::before {
 	top: 0px;
 	bottom: 0px;
 	padding: 0px 30px;
-	font-size: 16px;
+	font-size: 13px;
 	border-radius: 5px;
 	border-top-left-radius: 0px;
 	border-bottom-left-radius: 0px;
@@ -3559,13 +3589,13 @@ div[class*="col"]:nth-child(2) .video-item::before {
 }
 
 .checkout-box .cmn--btn {
-	font-size: 16px;
+	font-size: 14px;
 }
 
 .checkout-list li {
 	padding: 5px 0px;
 	color: #223263;
-	font-size: 18px;
+	font-size: 17px;
 }
 
 @media (max-width: 991px) {
@@ -3743,7 +3773,9 @@ div[class*="col"]:nth-child(2) .video-item::before {
 
 @media (max-width: 575px) {
 	.faq-item__title {
-		font-size: 20px;
+		font-weight: 700;
+		font-size: 19px;
+		line-height: 22px;
 	}
 }
 
@@ -3757,7 +3789,9 @@ div[class*="col"]:nth-child(2) .video-item::before {
 
 @media (max-width: 575px) {
 	.faq-item .faq-item__content p {
+		font-weight: 400;
 		font-size: 15px;
+		line-height: 24px;
 	}
 }
 
@@ -4388,8 +4422,8 @@ input[type="checkbox"] {
 	background-color: hsl(Var(--white));
 	border-radius: 50px;
 	padding-bottom: 20px;
-	padding-top: 40px;
-	margin-top: 150px;
+	padding-top: 30px;
+	margin-top: 100px;
 }
 @media (max-width: 575px) {
 	.tc-area {
@@ -4407,37 +4441,44 @@ input[type="checkbox"] {
 	padding-bottom: 0 !important;
 }
 .terms-conditions-wrapper {
-	height: 520px;
+	height: 400px;
 	overflow-y: auto;
 	padding: 20px 40px 0px;
 }
 @media (max-width: 575px) {
 	.terms-conditions-wrapper {
-		padding: 0px 35px 0;
-		height: 588px;
+		padding: 0px 15px 0;
+		height: 469px;
 	}
 }
 .terms-conditions-wrapper .title {
 	margin-bottom: 20px;
 	font-weight: 500;
-	font-size: 40px;
+	font-size: 20px;
 	color: #1f1f1f;
 }
 @media (max-width: 575px) {
 	.terms-conditions-wrapper .title {
-		font-size: 20px;
+		font-weight: 700;
+		font-size: 16px;
+		line-height: 30px;
+		letter-spacing: 0.435383px;
 	}
 }
 .terms-conditions-wrapper p {
-	font-size: 24px;
+	font-size: 15px;
 	color: #1f1f1f;
 }
 .terms-conditions-wrapper p:not(:last-child) {
 	margin-bottom: 30px;
+	font-size: 15px;
 }
 @media (max-width: 575px) {
 	.terms-conditions-wrapper p {
-		font-size: 18px;
+		font-weight: 400;
+		font-size: 14px;
+		line-height: 21px;
+		letter-spacing: 0.435383px;
 	}
 }
 @media (max-width: 575px) {
@@ -4705,6 +4746,7 @@ h6 {
 		border-radius: 20px;
 		/* margin: 0 -20px; */
 		margin-top: 115px !important;
+		height: 550px;
 	}
 }
 
@@ -4712,7 +4754,7 @@ h6 {
 	.shop-wrapper {
 		overflow: hidden;
 		overflow-y: auto;
-		height: 575px;
+		height: 500px;
 		padding: 0;
 		border-radius: 0px;
 		margin-top: 0px !important;
